#611: Fix overflow and underflow issues, adjust responsive placement of buttons on result, check that keywords exist for result before adding an element for them (#242)

--- a/src/styles/modules/_body.scss
+++ b/src/styles/modules/_body.scss
@@ -3,6 +3,11 @@
   padding:0 !important;
 }
 
+html, body, #root {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
   min-width: auto;
   text-align: left;
@@ -22,6 +27,9 @@ body {
   }
 
   .sk-layout {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: $white;
 
     a {
@@ -267,8 +275,12 @@ padding: 6px 0;
     display: initial;
   }
 
-  .sk-panel__content .Select-aria-only {
-    display: none;
+  .sk-panel__content {
+    word-wrap: break-word;
+
+    .Select-aria-only {
+      display: none;
+    }
   }
 
  .Select-clear-zone {
@@ -296,8 +308,12 @@ padding: 6px 0;
   display: flex;
   justify-content: space-between;
 
-  .is-flex .buttons {
-    margin-bottom: -0.5rem !important;
+  .is-flex .buttons:not(:last-child) {
+    margin-bottom: 0 !important;
+  }
+
+  .is-flex .buttons .button {
+    margin-bottom: 0 !important;
   }
 
   @include touch {
