--- a/src/styles/modules/_layout.scss
+++ b/src/styles/modules/_layout.scss
@@ -3,6 +3,7 @@
 }
 
 .sk-layout__filters, .sk-layout__results {
+  max-width: 100%;
   margin: 0;
   padding: 0.75rem 0.75rem;
   @extend .column;
